convert operator screen

--- a/html/nso/hnso/index.html
+++ b/html/nso/hnso/index.html
@@ -9,7 +9,7 @@
 
   <body sbContext="ScoreBoard.Game([game])">
     <div id="tabsDiv">
-      <a id="sbIndexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
+      <a id="sbIndexLink" href="/settings/sb_data/">Back to overview page</a>
       <ul id="tabBar">
         <li><a href="#IgrfTab">IGRF</a></li>
         <li><a href="#TeamsTab">Teams</a></li>
