--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div id="sbTemplates">
+    <div class="sbTemplates">
       <div class="UploadMediaDialog sbSegment">
         <div class="sbGroup">
           <div class="Upload"></div>
