--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -130,7 +130,7 @@
       </div>
     </div>
 
-    <div id="sbTemplates">
+    <div class="sbTemplates">
       <div class="RemoveDataDialog sbSegment">
         <div class="sbGroup">
           <div>
