add Penalty Box Timing

--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="sbSegment MainButtons">
-      <div class="sbGroup sbNoDetract Settings" sbClass="sbHide: Label(Undo): === 'No Action'">
+      <div class="sbGroup sbNoDistract Settings" sbClass="sbHide: Label(Undo): === 'No Action'">
         <button sbClass="sbHide: Rule(Jam.InjuryContinuation), Team(1).Injury: jtPossiblInjCont" sbToggle="InjuryContinuationUpcoming">
           Continuation Upcoming
         </button>
