--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
           </ul>
           <ul>
             <li><a href="views/wb">Penalty Whiteboard Display</a></li>
+            <li><a href="views/box">Penalty Box Display</a></li>
             <li><a href="views/roster">Roster Display</a></li>
             <li><a href="custom/">Custom Screens</a></li>
           </ul>
@@ -60,6 +61,9 @@
           </ul>
           <ul>
             <li><a class="curGame" href="nso/plt?pos=plt&game=">Penalty + Lineup Tracking</a></li>
+          </ul>
+          <ul>
+            <li><a href="nso/pbt">Penalty Box Timing</a></li>
           </ul>
         </div>
         <div class="btn">
