--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,9 @@
           <ul>
             <li><a href="nso/pbt">Penalty Box Timing</a></li>
           </ul>
+          <ul>
+            <li><a class="curGame" href="nso/alt?game=">Official Reviews</a></li>
+          </ul>
         </div>
         <div class="btn">
           <h2><span class="fa fa-2x fa-list-alt"></span> MANAGE DATA</h2>
