--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -88,7 +88,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr sbForeach="Ruleset:: _sbOrderRsAsTree: resort=Parent" sbAttr="value: Id" class="Content">
+            <tr sbForeach="Ruleset:: sbOrderRsAsTree: resort=Parent" sbAttr="value: Id" class="Content">
               <td class="Name">
                 <button class="Select Left" sbCall="datSelect">Select</button>
                 <button class="Delete Left" sbProp="disabled: Readonly" sbCall="datDeleteElem">Delete</button>
