fix bugs from second test; add PLT and box alternate names

--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title sbContext="ScoreBoard.Game([game]).Team(*)" sbDisplay="AlternateName(operator), UnifomrColor, Name: toTitle">
+    <title sbContext="ScoreBoard.Game([game]).Team(*)" sbDisplay="AlternateName(plt), UnifomrColor, Name: toTitle">
       Penalty Lineup Tracker | CRG ScoreBoard
     </title>
 
@@ -22,8 +22,8 @@
       <div class="sbSegment">
         <div class="sbGroup sbHeader">Select Team</div>
         <div class="sbGroup Teams">
-          <button team="1" sbCall="setTeam" sbContext="Team(1)" sbDisplay="AlternateName(operator),UniformColor,Name">Team 1</button>
-          <button team="2" sbCall="setTeam" sbContext="Team(2)" sbDisplay="AlternateName(operator),UniformColor,Name">Team 2</button>
+          <button team="1" sbCall="setTeam" sbContext="Team(1)" sbDisplay="AlternateName(plt),UniformColor,Name">Team 1</button>
+          <button team="2" sbCall="setTeam" sbContext="Team(2)" sbDisplay="AlternateName(plt),UniformColor,Name">Team 2</button>
           <button team="both" sbCall="setTeam">Both Teams</button>
         </div>
       </div>
