--- a/html/nso/pbt/index.html
+++ b/html/nso/pbt/index.html
@@ -12,7 +12,7 @@
     <div class="sbSegment" id="Unassigned">
       <div class="sbGroup sbHeader">
         <span class="col1"><button class="sbNoDistract" id="SwapTeams" sbCall="toggleSwap">Swap Teams</button></span>
-        <span class="perTeam" sbForeach="Team: 1,2: only" sbDisplay="UniformColor,AlternateName(operator),Name"></span>
+        <span class="perTeam" sbForeach="Team: 1,2: only" sbDisplay="AlternateName(box),UniformColor,Name"></span>
       </div>
       <div class="sbGroup">
         <span class="col1">Edit Lineups:</span>
@@ -49,7 +49,7 @@
     <div class="sbTemplates">
       <div id="LineupEditor" class="sbSegment" sbContext="Team(*).Position(*)">
         <span class="sbGroup">
-          <span>Set <span sbDisplay="^UniformColor,^AlternateName(operator),^Name"></span> <span sbDisplay="-:k.Position"></span> to</span>
+          <span>Set <span sbDisplay="^AlternateName(box),^UniformColor,^Name"></span> <span sbDisplay="-:k.Position"></span> to</span>
           <span sbButtonGroup sbPrefix="p:[*]"
             ><button sbClass="sbActive: p.Skater: sbIsEmpty" sbSet="p.Skater: ''" sbCall="sbCloseDialog">?</button>
             <button
