--- a/html/nso/pbt/index.html
+++ b/html/nso/pbt/index.html
@@ -15,12 +15,13 @@
         <span class="perTeam" sbForeach="Team: 1,2: only" sbDisplay="AlternateName(box),UniformColor,Name"></span>
       </div>
       <div class="sbGroup">
-        <span class="col1">Edit Lineups:</span>
+        <span class="col1">Edit/Pre-Select:</span>
         <span class="perTeam" sbForeach="Team: 1,2: only">
           <button
             sbForeach="Position: Jammer, Pivot, Blocker1, Blocker2, Blocker3: only"
+            sbClass="sbUnserved: HasUnserved"
             sbDisplay="RosterNumber: questionMarkIfEmpty"
-            sbCall="editLineup"
+            sbCall="positionDetails"
           ></button>
         </span>
       </div>
@@ -41,26 +42,41 @@
     </div>
     <div class="sbSegment" id="Buttons">
       <div class="sbGroup">
-        <button class="StartButton" sbSet="StartBoxTrip">Blocker Sat Down</button>
-        <button class="StartButton" sbSet="StartJammerBoxTrip">Jammer Sat Down</button>
+        <button sbSet="StartBoxTrip">Blocker Sat Down</button>
+        <button sbSet="StartJammerBoxTrip">Jammer Sat Down</button>
       </div>
     </div>
 
     <div class="sbTemplates">
-      <div id="LineupEditor" class="sbSegment" sbContext="Team(*).Position(*)">
-        <span class="sbGroup">
-          <span>Set <span sbDisplay="^AlternateName(box),^UniformColor,^Name"></span> <span sbDisplay="-:k.Position"></span> to</span>
-          <span sbButtonGroup sbPrefix="p:[*]"
-            ><button sbClass="sbActive: p.Skater: sbIsEmpty" sbSet="p.Skater: ''" sbCall="sbCloseDialog">?</button>
+      <div id="PositionDetails" class="sbSegment" sbContext="Team(*).Position(*)">
+        <div class="sbGroup">
+          <span>Skater: </span>
+          <span sbButtonGroup sbPrefix="p:[*]">
+            <button sbClass="sbActive: p.Skater: sbIsEmpty" sbSet="p.Skater: ''" sbCall="sbCloseDialog">?</button>
             <button
               sbForeach="^Skater:: rosterNumber: resort=RosterNumber"
               sbAttr="rosterNumber: RosterNumber"
               sbDisplay="RosterNumber"
               sbClass="sbActive: p.Skater: === elem.attr('Skater') | sbHide: Role: === 'NotInGame'"
               sbSet="p.Skater: elem.attr('Skater')"
-              sbCall="sbCloseDialog"
-            ></button
-          ></span>
+            ></button>
+          </span>
+        </div>
+        <div class="sbGroup">
+          <span>Penalties:</span>
+          <span sbDisplay="CurrentPenalties"></span>
+          <span><button sbCall="addPenalty">Add</button></span>
+          |
+          <span>Total: <span sbDisplay="PenaltyCount"></span></span>
+          <span
+            ><button sbClass="sbHide: PenaltyBox, CurrentBoxSymbols: noUnend" sbSet="UnendBoxTrip" sbCall="sbCloseDialog">
+              Unend Box Trip
+            </button></span
+          >
+        </div>
+        <div class="sbGroup">
+          <button class="StartButton" sbClass="sbHide: PenaltyBox" sbSet="StartBoxClock" sbCall="sbCloseDialog">Skater Sat Down</button>
+          <button sbClass="sbHide: PenaltyBox: !" sbSet="PenaltyBox: false" sbCall="sbCloseDialog">Has Left</button>
         </div>
       </div>
     </div>
