minor fixes and tweaks

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
           <li><a href="views/wb">Penalty Whiteboard Display</a></li>
           <li><a href="views/box">Penalty Box Display</a></li>
           <li><a href="views/roster">Roster Display</a></li>
-          <li><a href="custom/">Custom Screens</a></li>
+          <li><a href="custom/view">Custom Screens</a></li>
         </ul>
       </div>
     </div>
