inhibit LT box buttons when pbt is used

--- a/html/nso/pbt/index.html
+++ b/html/nso/pbt/index.html
@@ -80,5 +80,7 @@
         </div>
       </div>
     </div>
+
+    <div id="UsePBTDialog">Use of Penalty Box Timing is disabled.</div>
   </body>
 </html>
