--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -38,6 +38,9 @@
       <div class="sbSegment">
         <div class="sbGroup sbHeader">Options</div>
         <div class="sbGroup"><button sbToggle="$">Enable Lineup Tracking</button></div>
+        <div class="sbGroup">
+          <button sbToggle="/ScoreBoard.Settings.Setting(ScoreBoard.Penalties.UsePBT)">Enable Penalty Box Timing</button>
+        </div>
         <div class="sbGroup"><button sbCall="setZoom">Allow Pinch Zoom</button></div>
       </div>
     </div>
