improve penalty handling on PBT screen

--- a/html/nso/pbt/index.html
+++ b/html/nso/pbt/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="sbGroup">
           <span>Penalties:</span>
-          <span sbDisplay="CurrentPenalties"></span>
+          <span sbDisplay="PenaltyDetails: penDetailButtons: html"></span>
           <span><button sbCall="addPenalty">Add</button></span>
           |
           <span>Total: <span sbDisplay="PenaltyCount"></span></span>
@@ -79,8 +79,8 @@
           <button sbClass="sbHide: PenaltyBox: !" sbSet="PenaltyBox: false" sbCall="sbCloseDialog">Has Left</button>
         </div>
       </div>
-    </div>
 
-    <div id="UsePBTDialog">Use of Penalty Box Timing is disabled.</div>
+      <div id="UsePBTDialog">Use of Penalty Box Timing is disabled.</div>
+    </div>
   </body>
 </html>
