add copy button for games

--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -46,6 +46,7 @@
                 <button class="Delete Left" sbCall="datDeleteElem">Delete</button>
                 <a download class="Download Left" sbAttr="href: Name: datGameDlLink" sbButton>Download</a>
                 <a class="Edit Left" sbAttr="href: -: '/nso/hnso?game=' + k.Game" sbButton>Edit</a>
+                <button class="Copy Left" sbSet="Copy">Copy</button>
                 <span class="Name" sbDisplay="Name"></span>
               </td>
             </tr>
