distinguish box view and PBM screens

--- a/html/index.html
+++ b/html/index.html
@@ -38,6 +38,7 @@
           <li><a href="nso/plt?pos=lt&game=" class="curGame">Lineup Tracking</a></li>
           <li><a href="nso/plt?pos=plt&game=" class="curGame">Penalty + Lineup Tracking</a></li>
           <li><a href="nso/pbt">Penalty Box Timing</a></li>
+          <li><a href="nso/pbm">Penalty Box Manager</a></li>
           <li><a href="nso/alt?game=" class="curGame">Official Reviews</a></li>
         </ul>
       </div>
